--- a/simplemooc/simplemooc/accounts/templates/accounts/register.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1">
-        <h2>Informe seus dados de cadastro</h2>
+        <h2>Informe seus dados</h2>
         <form action="" class="pure-form pure-form-aligned" method="post">
             {% csrf_token %}
             <fieldset>
@@ -19,11 +19,7 @@
                     <div class="pure-controls">
                             <button type="submit" class="pure-button pure-button-primary"> Entrar</button>
                     </div>
-            </fieldset>
-            <p>
-                Não é cadastrado? <a href="{% url 'accounts:register' %}" title="">Cadastre-se</a><br/>
-                Esqueceu a senha? <a href="" title="">Lembrar senha</a><br/>
-            </p>
+            </fieldset>            
         </form>
     </div>
 
