--- a/simplemooc/simplemooc/accounts/templates/accounts/login.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/login.html
@@ -4,16 +4,16 @@
 <div class="pure-g-r content-ribbon">
     <div class="pure-u-1">
         <h2>Informe seus dados de cadastro</h2>
-        <form action="" class="pure-form pure-form-aligned" method="post">
+        <form class="pure-form pure-form-aligned" method="post">
             {% csrf_token %}
             <fieldset>
-                {{ form.non_field_erros}}
+                {{ form.non_field_erros }}
                 
                 {% for field in form %}
                     <div class="pure-control-group">
-                        {{ field.label_tag}}
+                        {{ field.label_tag }}
                         {{ field }}
-                        {{ field.erros}}
+                        {{ field.erros }}
                     </div>
                 {% endfor %}
                     <div class="pure-controls">
