Adding user mechanism

--- a/simplemooc/simplemooc/accounts/templates/accounts/dashboard.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/dashboard.html
@@ -11,12 +11,13 @@
     </div>
     <div class="pure-u-1-3">
         <div class="pure-menu pure-menu-open">
-            <a class="pure-menu-heading">Meus Cursos</a>
+            <a class="pure-menu-heading">Meus Contratos</a>
             <ul>
-                <li><a href="#">Curso 1</a></li>
-                <li><a href="#">Curso 2</a></li>
+                <li><a href="#">Contrato 1</a></li>
+                <li><a href="#">Contrato 2</a></li>
                 <li class="pure-menu-heading">Minha Conta</li>
                 <li><a href="{% url 'accounts:edit' %}">Editar Conta</a></li>
+                <li><a href="{% url 'accounts:edit_password' %}">Editar Senha</a></li>
                 
             </ul>
         </div>
