--- a/simplemooc/simplemooc/accounts/templates/accounts/edit_password.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/edit_password.html
@@ -3,7 +3,7 @@
 {% block breadcrumb %}
     {{ block.super }}
     <li>/</li>
-    <li><a href="{% url 'accounts:edit' %}">Editar Conta</a></li>
+    <li><a href="{% url 'accounts:edit_password' %}">Editar Senha</a></li>
 {% endblock %}
     
 {% block dashboard_content %}
@@ -11,7 +11,7 @@
 <form class="pure-form pure-form-stacked" method="post">
     {% csrf_token %}
     {% if success %}
-    <p>Os dados foram alterados com sucesso</p>
+    <p>A sua senha alterada com sucesso</p>
     {% endif %}
     <fieldset>
         {{ form.non_field_errors }}
@@ -24,7 +24,7 @@
         {% endfor %}
         <div class="pure-controls">
             <button type="submit" class="pure-button pure-button-primary">
-                Enviar
+                Alterar Senha
             </button>
         </div>
 
