--- a/simplemooc/simplemooc/core/templates/base.html
+++ b/simplemooc/simplemooc/core/templates/base.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
-    <title>Simple MOOC</title>
+    <meta name="description" content="Simple IMOB - Uma simples plataforma de Gestão de contratos imobiliários" />
+    <title>Simple IMOB</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 <body>
     <div class="header">
         <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="{% url 'core:home' %}">SIMPLE MOOC</a>
+            <a class="pure-menu-heading" href="{% url 'core:home' %}">Simple IMOB</a>
             <ul>
                 <li class="pure-menu-selected"><a href="{% url 'core:home' %}">Início</a></li>
-                <li><a href="{% url 'courses:index' %}">Cursos</a></li>
+                <li><a href="{% url 'courses:index' %}">Contratos</a></li>
                 <li><a href="{% url 'core:contact' %}">Contato</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'accounts:dashboard' %}">Painel</a></li>
@@ -29,7 +29,7 @@
     <div class="content">
         {% block content %}{% endblock %}
         <div class="footer">
-            Simple MOOC - Uma simples plataforma de ensino a distância
+            Simple IMOB - Uma simples plataforma de Gestão de contratos imobiliários
         </div>
     </div>
     <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
