--- a/simplemooc/simplemooc/accounts/templates/accounts/login.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/login.html
@@ -22,7 +22,7 @@
             </fieldset>
             <p>
                 Não é cadastrado? <a href="{% url 'accounts:register' %}" title="">Cadastre-se</a><br/>
-                Esqueceu a senha? <a href="" title="">Lembrar senha</a><br/>
+                Esqueceu a senha? <a href="{% url 'accounts:password_reset' %}" title="">Lembrar senha</a><br/>
             </p>
         </form>
     </div>
