--- a/simplemooc/simplemooc/core/templates/base.html
+++ b/simplemooc/simplemooc/core/templates/base.html
@@ -27,6 +27,15 @@
         </div>
     </div>
     <div class="content">
+        <div class="pure-g-r content-ribbon">
+            {% if messages %}
+            <aside class="pure-u-1">
+                {% for message in messages %}
+                <p>{{ message }}</p>
+                {% endfor %}
+            </aside>
+            {% endif %}
+        </div>
         {% block content %}{% endblock %}
         <div class="footer">
             Simple IMOB - Uma simples plataforma de Gestão de contratos imobiliários
