--- a/simplemooc/simplemooc/courses/templates/courses/details.html
+++ b/simplemooc/simplemooc/courses/templates/courses/details.html
@@ -14,7 +14,7 @@
                     {{ course.about | linebreaks }}
                 </h2>
                 <p>
-                    <a href="#" class="pure-button primary-button">Inscreva-se</a>
+                    <a href="{% url 'courses:enrollment' course.slug %}" class="pure-button primary-button">Inscreva-se</a>
                 </p>
             </div>
         </div>
