--- a/simplemooc/simplemooc/core/templates/base.html
+++ b/simplemooc/simplemooc/core/templates/base.html
@@ -7,7 +7,9 @@
     <meta name="description" content="Simple IMOB - Uma simples plataforma de Gestão de contratos imobiliários" />
     <title>Simple IMOB</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    
 </head>
 <body>
     <div class="header">
