--- a/simplemooc/simplemooc/accounts/templates/accounts/dashboard.html
+++ b/simplemooc/simplemooc/accounts/templates/accounts/dashboard.html
@@ -3,6 +3,7 @@
 {% load courses_tags %}
 
 {% block content %}
+{% load_my_courses user as enrollments %}
 <div class="pure-g-r content-ribbon">
     
     <div class="pure-u-1">
@@ -19,8 +20,8 @@
                     Bem vindo, {{ user }}
                 </li>
                 {% block menu_options %}
-                {% load_my_courses user as enrollments %}
                 {% for enrollment in enrollments %}
+                <li class="pure-menu-heading">Contratos</li>
                 <li>
                     <a href="{% url 'courses:announcements' enrollment.course.slug %}">
                         <i class="fa fa-book"></i>
@@ -28,9 +29,9 @@
                     </a>
                 </li>
                 {% empty %}
+                <li class="pure-menu-heading">Cursos</li>
                 <li>Você não está inscrito em nenhum curso</li>
                 {% endfor %}
-                <li class="pure-menu-heading">Contratos</li>
                 <li class="pure-menu-heading">Configurações de Conta</li>
                 <li>
                     <a href="{% url 'accounts:edit' %}">
@@ -60,7 +61,10 @@
                     ({{ enrollment.course.start_date|date:'d/m/Y'|default:'Sem data' }})
                     </h3>
                     {{ enrollment.course.description|linebreaks }}
-                    
+                    <div class="pure-controls">
+                        <a href="{% url 'courses:announcements' enrollment.course.slug %}" class="pure-button pure-button-primary">Acessar</a>
+                        <a href="{% url 'courses:undo_enrollment' enrollment.course.slug %}" class="pure-button button-error">Cancelar</a>
+                    </div>
                 </div>
                 {% empty %}
                 <aside class="pure-u-1">
