--- a/simplemooc/simplemooc/courses/templates/courses/announcements.html
+++ b/simplemooc/simplemooc/courses/templates/courses/announcements.html
@@ -1,25 +1,38 @@
-{% extends "accounts/dashboard.html" %}
+{% extends "courses/course_dashboard.html" %}
 
 {% block dashboard_content %}
-
-{% block menu_opstions %}
-<li>
-    {{ course }}
-</li>
-{{ block.super }}
-{% endblock %}
 <div class="well">
-    <h2>Início das aulas, seja bem vindos</h2>
-    <p></p>
+    <h2>Iníco das aulas, sejam bem vindos</h2>
     <p>
-        <a href=""><i></i></a>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+        <a href="#comments" title="">
+        <i class="fa fa-comments-o"></i>
+        10 Comentários
+        </a>
     </p>
 </div>
 <div class="well">
-    <h2>Início das aulas, seja bem vindos</h2>
-    <p></p>
+    <h2>Iníco das aulas, sejam bem vindos</h2>
     <p>
-        <a href=""><i></i></a>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <p>
+        <a href="#comments" title="">
+        <i class="fa fa-comments-o"></i>
+        10 Comentários
+        </a>
     </p>
 </div>
 {% endblock %}
