--- a/simplemooc/simplemooc/courses/templates/courses/announcements.html
+++ b/simplemooc/simplemooc/courses/templates/courses/announcements.html
@@ -3,10 +3,12 @@
 {% block dashboard_content %}
 {% for announcement in announcements %}
 <div class="well">
-    <h2>{{ announcement.title }}</h2>
+    <h2>
+            <a href="{% url 'courses:show_announcement' course.slug announcement.pk %}">{{ announcement.title }}</a>
+    </h2>
     {{ announcement.content|linebreaks}}
     <p>
-        <a href="#comments" title="">
+        <a href="{% url 'courses:show_announcement' course.slug annoucement.pk%}#comments">
         <i class="fa fa-comments-o"></i>
         {% with comments_count=announcement.comments.count%}
          {{ comments_count }} 
