--- a/simplemooc/simplemooc/courses/templates/courses/course_dashboard.html
+++ b/simplemooc/simplemooc/courses/templates/courses/course_dashboard.html
@@ -6,7 +6,7 @@
     {{ course }}
 </li>
 <li>
-    <a href="#">
+    <a href="{% url 'courses:lessons' course.slug %}">
         <i class="fa fa-video-camera"></i>
         Aulas e Materiais
     </a>
@@ -18,7 +18,7 @@
     </a>
 </li>
 <li>
-    <a href="#">
+    <a href="{% url 'courses:announcements' course.slug %}">
         <i class="fa fa-envelope"></i>
         Anúncios
     </a>
